--- a/src/css/_variables.scss
+++ b/src/css/_variables.scss
@@ -1,6 +1,8 @@
 $primary-text: #fff;
 $primary-bg: #000;
-
+$icon-font-family: 'VideoJS';
+$text-font-family: Arial, sans-serif;
+$base-font-size: 10px;
 
 // OLD SHIT
 
