--- a/src/css/components/_control.scss
+++ b/src/css/components/_control.scss
@@ -11,7 +11,7 @@
 }
 
 .video-js .vjs-control:before {
-  font-family: $font-family;
+  font-family: $icon-font-family;
   font-size: 1.8em;
   line-height: 1.67;
   position: absolute;
