--- a/src/css/components/_time.scss
+++ b/src/css/components/_time.scss
@@ -2,10 +2,11 @@
   @include flex(none);
   @include order(2);
   font-size: 1em;
-  /* Align vertically by making the line height the same as the control bar *///
   line-height: 3em;
 }
-.video-js .vjs-current-time { display: none; }
-.video-js .vjs-duration { display: none; }
-.video-js .vjs-remaining-time { display: none; }
+
+/* We need the extra specificity that referencing .vjs-no-flex provides. */
+.video-js .vjs-current-time, .video-js.vjs-no-flex .vjs-current-time { display: none; }
+.video-js .vjs-duration, .video-js.vjs-no-flex .vjs-duration { display: none; }
+.video-js .vjs-remaining-time, .video-js.vjs-no-flex .vjs-remaining-time { display: none; }
 .vjs-time-divider { display: none; line-height: 3em; }
