moved volume to be vertical by default

--- a/src/css/_variables.scss
+++ b/src/css/_variables.scss
@@ -7,3 +7,5 @@ $secondary-bg: lighten($primary-bg, 35%);
 $icon-font-family: 'VideoJS';
 $text-font-family: Arial, sans-serif;
 $base-font-size: 10px;
+
+$control-bar-transparency: 0.5;
