--- a/src/css/components/_chapters.scss
+++ b/src/css/components/_chapters.scss
@@ -2,6 +2,10 @@
   content: $icon-chapters;
 }
 
+.video-js .vjs-chapters-button.vjs-menu-button .vjs-menu {
+  left: 2em;
+}
+
 .video-js .vjs-chapters-button.vjs-menu-button .vjs-menu .vjs-menu-content {
   width: 24em;
   left: -12em;
