--- a/src/css/components/_volume.scss
+++ b/src/css/components/_volume.scss
@@ -28,35 +28,36 @@
   @include display-flex(center);
 }
 .video-js .vjs-volume-bar {
-  width: 5em;
-  height: 0.3em;
+  width: 0.3em;
+  height: 5em;
+  margin: 1.3em;
 }
 
 .video-js .vjs-volume-level {
   position: absolute;
-  top: 0;
+  bottom: 0;
   left: 0;
-  height: 0.3em;
+  width: 0.3em;
   /* assuming volume starts at 1.0 */
-  width: 100%;
+  height: 100%;
 
   background-color: $primary-text;
 }
 .video-js .vjs-volume-bar .vjs-volume-handle {
-  width: 0.5em;
-  height: 0.5em;
+  width: 0.9em;
+  height: 0.9em;
   /* Assumes volume starts at 1.0. If you change the size of the
   handle relative to the volume bar, you'll need to update this value
   too. */
-  left: 4.5em;
+  bottom: 4.1em;
 }
 
 .video-js .vjs-volume-handle:before {
   font-size: 0.9em;
-  top: 0.1em;
+  top: 0em;
 
-  width: 1em;
-  height: 1em;
+  width: 0.9em;
+  height: 0.9em;
 }
 
 /* The volume menu button is like menu buttons (captions/subtitles) but works
@@ -68,21 +69,23 @@ width and height to zero. */
   display: block;
   width: 0;
   height: 0;
+  left: 0.5em;
   border-top-color: transparent;
 }
 
-.video-js .vjs-volume-menu-button .vjs-menu .vjs-menu-content {
+.video-js .vjs-menu-button.vjs-volume-menu-button .vjs-menu .vjs-menu-content {
   height: 0;
   width: 0;
+  // transform: translate(-3.65em, -2.5em) rotate(-90deg);
 }
 
 .video-js .vjs-volume-menu-button:hover .vjs-menu,
 .video-js .vjs-volume-menu-button .vjs-menu.vjs-lock-showing {
-  border-top-color: rgba(7, 40, 50, 0.5); /* Same as ul background */
+  // border-top-color: rgba(7, 40, 50, 0.5); /* Same as ul background */
 }
 
 .video-js .vjs-volume-menu-button:hover .vjs-menu .vjs-menu-content,
 .video-js .vjs-volume-menu-button .vjs-menu.vjs-lock-showing .vjs-menu-content {
-  height: 2.9em;
-  width: 10em;
+  height: 8em;
+  width: 2.9em;
 }
