--- a/src/css/components/_progress.scss
+++ b/src/css/components/_progress.scss
@@ -43,8 +43,8 @@ specific time ranges that have been buffered */
 }
 
 .video-js .vjs-slider-handle.vjs-seek-handle {
-  width: 1.5em;
-  height: 100%;
+  width: 0.95em;
+  height: 0.95em;
 }
 
 
