--- a/src/css/components/_captions.scss
+++ b/src/css/components/_captions.scss
@@ -1,3 +1,3 @@
-.video-js .vjs-captions-button:before {
-  content: $icon-captions;
+.video-js .vjs-captions-button {
+  @extend .vjs-icon-captions;
 }
