--- a/src/css/components/_chapters.scss
+++ b/src/css/components/_chapters.scss
@@ -1,5 +1,5 @@
-.video-js .vjs-chapters-button:before {
-  content: $icon-chapters;
+.video-js .vjs-chapters-button {
+  @extend .vjs-icon-chapters;
 }
 
 .video-js .vjs-chapters-button.vjs-menu-button .vjs-menu {
