--- a/src/css/components/_play-pause.scss
+++ b/src/css/components/_play-pause.scss
@@ -4,9 +4,9 @@
   @include flex(none);
   @include order(0);
 }
-.video-js .vjs-play-control:before {
-  content: $icon-play;
+.video-js .vjs-play-control {
+  @extend .vjs-icon-play;
 }
-.video-js.vjs-playing .vjs-play-control:before {
-  content: $icon-pause;
+.video-js.vjs-playing .vjs-play-control {
+  @extend .vjs-icon-pause;
 }
