Remove unnecessary style rule

--- a/src/css/video-js.less
+++ b/src/css/video-js.less
@@ -1,4 +1,6 @@
-/*!
+/*
+ */*!
+ */
 Video.js Default Styles (http://videojs.com)
 Version GENERATED_AT_BUILD
 Create your own skin at http://designer.videojs.com
@@ -971,9 +973,6 @@ body.vjs-full-window {
   right: 0;
   pointer-events: none;
 }
-
-/* Increase font-size when fullscreen */
-.video-js.vjs-fullscreen .vjs-text-track { font-size: 3em; }
 
 /* Captions Settings Dialog */
 .vjs-caption-settings {
