Added getFileExtension to libs and used on Html5 and Flash canHandleSource methods

--- a/src/css/video-js.less
+++ b/src/css/video-js.less
@@ -1,6 +1,6 @@
  /*!
 Video.js Default Styles (http://videojs.com)
-Version 4.12.3
+Version GENERATED_AT_BUILD
 Create your own skin at http://designer.videojs.com
 */
 
