More build and testing cleanup. Also some reorganization.

--- a/src/css/video-js.less
+++ b/src/css/video-js.less
@@ -1,6 +1,6 @@
  /*!
 Video.js Default Styles (http://videojs.com)
-Version GENERATED_AT_BUILD
+@version GENERATED_AT_BUILD
 Create your own skin at http://designer.videojs.com
 */
 
