singular time-control and live-control. remove playing class on pause

--- a/src/css/components/_live.scss
+++ b/src/css/components/_live.scss
@@ -1,10 +1,10 @@
-.video-js.vjs-live .vjs-time-controls,
+.video-js.vjs-live .vjs-time-control,
 .video-js.vjs-live .vjs-time-divider,
 .video-js.vjs-live .vjs-progress-control {
   display: none;
 }
 
-.video-js .vjs-live-controls, .video-js.vjs-no-flex .vjs-live-controls {
+.video-js .vjs-live-control, .video-js.vjs-no-flex .vjs-live-control {
   display: none;
   font-size: 1em;
   line-height: 3em;
