--- a/src/css/components/_control-bar.scss
+++ b/src/css/components/_control-bar.scss
@@ -36,6 +36,12 @@
   display: none;
 }
 
+// Don't hide the control bar if it's audio
+.video-js.vjs-audio.vjs-has-started.vjs-user-inactive.vjs-playing .vjs-control-bar {
+  opacity: 1;
+  visibility: visible;
+}
+
 /* IE8 is flakey with fonts, and you have to change the actual content to force
 fonts to show/hide properly.
 - "\9" IE8 hack didn't work for this
