--- a/src/css/components/_control.scss
+++ b/src/css/components/_control.scss
@@ -32,7 +32,7 @@
 }
 
 /* IE 8 + 9 Support */
-.video-js.vjs-no-flex .vjs-control {
+.vjs-no-flex .vjs-control {
   display: table-cell;
   vertical-align: middle;
 }
