--- a/src/css/components/_layout.scss
+++ b/src/css/components/_layout.scss
@@ -16,6 +16,7 @@
   /* Avoiding helvetica: issue #376 */
   font-family: $text-font-family;
 
+  @include user-select(none);
 
   /* Fix for Firefox 9 fullscreen (only if it is enabled). Not needed when
   checking fullScreenEnabled. */
