--- a/src/css/_variables.scss
+++ b/src/css/_variables.scss
@@ -8,4 +8,5 @@ $icon-font-family: 'VideoJS';
 $text-font-family: Arial, sans-serif;
 $base-font-size: 10px;
 
+$control-bar-bg: #2B333F;
 $control-bar-transparency: 0.5;
