Switched to box-sizing:border-box for all player elements
This doesn't immediately break anything (I know of) because the controls
were originally designed to work in both border-box and content-box
environments. Extra elements were added to create internally padding.

This does open the door for some simplification of the HTML, though the extra
elements could still be useful for extra skin design options.

closes #2082
closes #1444

--- a/src/css/components/_layout.scss
+++ b/src/css/components/_layout.scss
@@ -1,5 +1,7 @@
 .video-js {
-  display: border-box;
+  display: block;
+  box-sizing: border-box;
+
   color: $primary-text;
   background-color: $primary-bg;
   position: relative;
@@ -26,6 +28,13 @@
     width: 100% !important;
     height: 100% !important;
   }
+}
+
+/* All elements inherit border-box sizing */
+.video-js *,
+.video-js *:before,
+.video-js *:after {
+  box-sizing: inherit;
 }
 
 /* Playback technology elements expand to the width/height of the containing div
