Added vjs-button class to button controls

--- a/src/css/components/_control.scss
+++ b/src/css/components/_control.scss
@@ -1,4 +1,5 @@
-.video-js .vjs-control {
+.video-js .vjs-control,
+.video-js .vjs-button {
   outline: none;
   position: relative;
   text-align: center;
@@ -9,7 +10,8 @@
   @include flex(none);
 }
 
-.video-js .vjs-control:before {
+.video-js .vjs-control:before,
+.video-js .vjs-button:before {
   font-size: 1.8em;
   line-height: 1.67;
   position: absolute;
@@ -23,7 +25,10 @@
 /* Replacement for focus outline */
 .video-js .vjs-control:focus:before,
 .video-js .vjs-control:hover:before,
-.video-js .vjs-control:focus {
+.video-js .vjs-control:focus,
+.video-js .vjs-button:focus:before,
+.video-js .vjs-button:hover:before,
+.video-js .vjs-button:focus {
   text-shadow: 0em 0em 1em rgba($primary-text, 1);
 }
 
@@ -33,7 +38,8 @@
 }
 
 /* IE 8 + 9 Support */
-.vjs-no-flex .vjs-control {
+.vjs-no-flex .vjs-control,
+.vjs-no-flex .vjs-button {
   display: table-cell;
   vertical-align: middle;
 }
