adding back caption-settings styles. Closes #2104

--- a/src/css/_variables.scss
+++ b/src/css/_variables.scss
@@ -5,7 +5,7 @@ $primary-bg: #000;
 $secondary-bg: lighten($primary-bg, 35%);
 
 $icon-font-family: 'VideoJS';
-$text-font-family: Arial, sans-serif;
+$text-font-family: Arial, Helvetica, sans-serif;
 $base-font-size: 10px;
 
 $control-bar-bg: #2B333F;
