--- a/src/css/video-js.scss
+++ b/src/css/video-js.scss
@@ -23,3 +23,4 @@
 @import "components/chapters";
 @import "components/subtitles";
 @import "components/adaptive";
+@import "components/captions-settings";
