--- a/src/css/components/_poster.scss
+++ b/src/css/components/_poster.scss
@@ -1,4 +1,6 @@
 .vjs-poster {
+  display: inline-block;
+  vertical-align: middle;
   background-repeat: no-repeat;
   background-position: 50% 50%;
   background-size: contain;
@@ -10,9 +12,11 @@
   right: 0;
   bottom: 0;
   left: 0;
+  height: 100%;
 }
 .vjs-poster img {
   display: block;
+  vertical-align: middle;
   margin: 0 auto;
   max-height: 100%;
   padding: 0;
