--- a/src/css/components/_progress.scss
+++ b/src/css/components/_progress.scss
@@ -27,7 +27,16 @@
 
 .video-js .vjs-play-progress {
   background-color: $primary-text;
+  @extend .vjs-icon-circle;
+
+  &:before {
+    position: absolute;
+    top: -0.3em;
+    right: -0.5em;
+
+  }
 }
+
 .video-js .vjs-load-progress {
   background: rgb(100, 100, 100) /* IE8- Fallback */;
   background: rgba(255, 255, 255, 0.2);
@@ -42,6 +51,7 @@ specific time ranges that have been buffered */
 .video-js .vjs-slider-handle.vjs-seek-handle {
   width: 0.95em;
   height: 0.95em;
+  display: none;
 }
 
 
